# apple-notes-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
src/apple_notes_mcp/: __init__.py  notes_database.py  server.py
src/apple_notes_mcp/proto/: notestore.proto  notestore_pb2.py
